# Interlock

./: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  Makefile.nmake  README.md  build.zig  build.zig.zon  build_11.zig  build_12.zig  build_13.zig  conanfile.py  vcpkg.json
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  bug-report.yml  feature-request.yml
Release/Linux/include/: webinix.hpp
Release/Windows/include/: webinix.h
Release/macOS/include/: webinix.h  webinix.hpp
bridge/: .gitignore  README.md  build.bat  build.ps1  build.sh  js2c.js  js2c.py  utils.ts  webinix.ts  webinix_bridge.h  webinix_bridge.ts
cwebinix/: CMakeLists.txt  cwebinix.cpp  helloworld.py
examples/: CMakeLists.txt  custom_browser.cpp  example.c  favicon.cpp  helloworld.cpp  index.html  manual_browser.cpp  multi_access.cpp  serve_folder.cpp  text_editor.cpp
examples/C/: README.md  main.c
examples/C++/: README.md  main.cpp
examples/C++/VS2019/serve_a_folder/my_webinix_app/: my_webinix_app.cpp  my_webinix_app.vcxproj  webinix.h  webinix.hpp
examples/C++/VS2022/serve_a_folder/: my_webinix_app.sln
examples/C++/VS2022/serve_a_folder/my_webinix_app/: my_webinix_app.cpp  my_webinix_app.vcxproj  my_webinix_app.vcxproj.filters  webinix.h  webinix.hpp
examples/C++/Windows/GCC/: Makefile  win.rc
examples/C++/Windows/MSVC/: Makefile
examples/C++/Windows/VS2019/hello_world/: hello_world.vcxproj
examples/C++/Windows/VS2019/webinix-2-static-x64/: webinix-2-static-x64.vcxproj
examples/C++/call_cpp_from_js/: GNUmakefile  Makefile  README.md  main.cpp
examples/C++/call_js_from_cpp/: GNUmakefile  Makefile  README.md  main.cpp
examples/C++/hello_world/: README.md  main.cpp
examples/C++/minimal/: GNUmakefile  Makefile  README.md  main.cpp  webinix.hpp
examples/C++/serve_a_folder/: GNUmakefile  Makefile  Makefile.nmake  README.md  index.html  main.cpp  second.html
examples/C/Linux/Clang/: Makefile
examples/C/Linux/GCC/: Makefile
examples/C/Windows/GCC/: Makefile
examples/C/Windows/MSVC/: Makefile
examples/C/Windows/TCC/: Makefile
examples/C/Windows/VS2019/: hello_world.sln
examples/C/calculator/: README.md  main.c
examples/C/call_c_from_js/: GNUmakefile  Makefile  README.md  main.c
examples/C/call_js_from_c/: GNUmakefile  Makefile  Makefile.nmake  README.md  main.c
examples/C/chatgpt_api/: GNUmakefile  Makefile  main.c
examples/C/custom_web_server/: GNUmakefile  index.html  main.c  second.html
examples/C/frameless/: GNUmakefile  Makefile  main.c
examples/C/hello_world/: README.md  main.c
examples/C/kiosk/: main.c
examples/C/minimal/: Makefile  Makefile.nmake  README.md  main.c
examples/C/public_network_access/: GNUmakefile  Makefile  main.c
examples/C/react/: README.md  build_react.bat  build_react.sh  main.c  vfs.h
examples/C/react/webinix-react-example/: package-lock.json  package.json
examples/C/serve_a_folder/: GNUmakefile  README.md  bun_test.ts  deno_test.ts  index.html  main.c  node_test.js  second.html
examples/C/serve_folder/: README.md  main.c
examples/C/text-editor/: Makefile  README.md  main.c  text-editor.c  webinix.h
examples/C/text-editor/ui/: MainWindow.html  index.html
examples/C/virtual_file_system/: GNUmakefile  main.c  vfs.h  vfs.py
examples/C/virtual_file_system/ui/: index.html
examples/C/web_app_multi_client/: Makefile  index.html  main.c
examples/Go/: example.go  main.go  webinix.go
examples/Go/hello_world/: README.md  go.mod  main.go
examples/Go/hello_world/webinix/: webinix.go  webinix.h
examples/Go/webinix/: go.mod  webinix.go  webinix_test.go
examples/Python/: README.md  example.py  hello_world.py  main.py  minimal.py  second.html  serve_folder.html  serve_folder.py  webinix.py
examples/Python/PyPI/: README.md  test_package.py
examples/Python/PyPI/Package/: README.md  pyproject.toml
examples/Python/dev/: main.py
examples/Python/hello_world/: README.md  main.py  webinix.py
examples/Python/minimal/: main.py
examples/Python/serve_folder/: main.py
examples/Python/software/andershell3000/: README.md  andershell3000.py
examples/Rust/: README.md
examples/Rust/hello_world/: Cargo.toml  README.md  build.rs
examples/Rust/hello_world/src/: Webui.rs  main.rs
examples/TypeScript/: example.c
examples/TypeScript/Deno/: README.md  hello_world.ts  webinix.ts
examples/TypeScript/Deno/deno_server/: README.md  deno_server.ts  server.ts  window.c
examples/TypeScript/Deno/dynamic/: example.ts  webinix.ts
examples/TypeScript/Deno/hello_world/: README.md  hello_world.ts
examples/TypeScript/Deno/module/: webinix.ts
examples/TypeScript/Deno/webinix_server/: README.md  example.c  index.ts
examples/TypeScript/Nodejs/: README.md
examples/TypeScript/Nodejs/nodejs_server/: README.md  server.js  window.c
examples/TypeScript/Nodejs/simple_window/: README.md  window.c
examples/TypeScript/Nodejs/webinix_server/: README.md  example.c  index.js
examples/V/: README.md
examples/Windows/GCC/: Makefile
examples/Windows/MSVC/: Makefile
examples/Windows/TCC/: Makefile
examples/Zig/: README.md
examples/Zig/call_from_js/: build.zig  build.zig.zon
examples/Zig/call_from_js/src/: main.zig
examples/Zig/hello_world/: build.zig  build.zig.zon
examples/Zig/hello_world/src/: c.zig  main.zig
examples/Zig/minimal/: build.zig  build.zig.zon  minimal.zig
examples/Zig/serve_folder/: build.zig  build.zig.zon  index.html
examples/Zig/serve_folder/src/: main.zig
examples/helloworld/: CMakeLists.txt  helloworld.cpp
include/: webinix.h  webinix.hpp
include/webinix/: webinix.hpp
pywebinix/: CMakeLists.txt  helloworld.py  pywebinix.cpp
scripts/: build.bat
src/: CMakeLists.txt  webinix.c  webinix.cpp  webinix_core.h
src/civetweb/: README.md
src/client/: webinix.d.ts  webinix.js  webinix.ts
src/webview/: wkwebview.m
test/: CMakeLists.txt  test.cpp
tests/: GNUmakefile  call_c_from_js.c  fail_test.c
website/: index.html
website/docs/: CNAME  README.md  _coverpage.md  _sidebar.md  c_api.md  cpp_api.md  golang_api.md  index.html  nim_api.md  python_api.md  v_api.md
(+98 files in other folders)
